--- a/css/aboutPage.css
+++ b/css/aboutPage.css
@@ -54,7 +54,7 @@ hr {
     font-family: 'Edu VIC WA NT Beginner', cursive;
 }
 
-@media screen and (min-width: 1030px){
+/* @media screen and (min-width: 1030px){
     .content-area {
         display: flex;
     }
@@ -80,6 +80,32 @@ hr {
         background-size:contain;
         height: 100vh;
     }
+} */
+
+@media screen and (min-width: 1030px){
+    .content-area {
+        display: flex;
+    }
+}
+
+@media screen and (max-width: 1030px) {
+
+
+    img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 50px;
+        margin-bottom: 50px;
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+
+    header h1 {
+        margin-top: 70px;
+        font-size: 50px;
+    }
+        
 }
 
 /*navi*/
