--- a/css/aboutPage.css
+++ b/css/aboutPage.css
@@ -9,6 +9,10 @@ body{
     font-size: 30px;
 }
 
+.background{
+    display: none;
+}
+
 .container-right {
     flex: 1;
     position: -webkit-sticky;
@@ -54,69 +58,94 @@ hr {
     font-family: 'Edu VIC WA NT Beginner', cursive;
 }
 
-/* @media screen and (min-width: 1030px){
+
+@media screen and  (min-width:1030px){
+
     .content-area {
         display: flex;
     }
+    
+    .container-left {
+    flex: 1;
+    text-align: center;
+    height: 100vh;
+    }
+
+    .container-right {
+    flex: 1;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background: url(../images/profile-half-left.jpg) left bottom no-repeat;
+        background-size: auto;
+    background-size: contain;
+    }
 }
 
-@media screen and (max-width: 1630px) {
-    .aboutTitle {
-        margin-left: 142px;  
-        background-color: rgba(255,255,255,0.6);
+@media screen and (max-width: 1600px) and (min-width:800px){
+    .aboutContent,
+    .aboutTitle{
+        margin-left: 90px;
+        margin-right: 90px;
     }
-    .aboutContent {
-        margin-left: 142px;
-        background-color: rgba(255,255,255,0.6);
-    }
-    hr {
-        margin-left: 142px;
-    }
-    .container-right{
-        display: none;
-    }
-    .container-left{
-        background: url(../images/profile-half-left.jpg) left bottom no-repeat;
-        background-size:contain;
-        height: 100vh;
-    }
-} */
 
-@media screen and (max-width:1700px) and (min-width:1030px){
-    img{
-        margin-top: 250px;
-    }
-    header {
-        margin-right: 30px;
+    hr {
+        margin-left: 90px;
+        margin-right: 90px;    
     }
     
 }
 
-@media screen and (min-width: 1030px){
-    .content-area {
-        display: flex;
+
+@media screen and (max-width:1030px){
+
+    .background {
+    height: 100%;
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    }
+
+    .background {
+    display: block;
+    }
+
+    .container-left {
+    z-index: 2;
+    position: relative;
+    }
+
+    .container-left {
+    flex: 1;
+    text-align: center;
+    height: 100vh;
+    }
+
+    .background-photo {
+    height: 100%;
+    }
+
+    .aboutContent,
+    .aboutTitle{
+        background-color: rgba(255,255,255,0.6);
+    }
+
+}
+
+@media screen and (max-width:800px){
+
+    .aboutContent,
+    .aboutTitle{
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    hr {
+        margin-left: 30px;
     }
 }
 
-@media screen and (max-width: 1030px) {
 
-
-    img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 50px;
-        margin-bottom: 50px;
-        padding-top: 100px;
-        padding-bottom: 100px;
-    }
-
-    header h1 {
-        margin-top: 70px;
-        font-size: 50px;
-    }
-        
-}
 
 /*navi*/
 
