--- a/css/cvPage.css
+++ b/css/cvPage.css
@@ -86,7 +86,58 @@ ul{
     }
 }
 
-@media screen and (max-width: 1630px) {
+@media screen and (max-width: 1600px) and (min-width:800px){
+    .workTitle,
+    .educationTitle,
+    .certificatesTitle,
+    .skillsTitle,
+    .workContent,
+    .educationContent,
+    .certificatesContent,
+    .skillsContent,
+    .contact-links {
+        margin-left: 90px;  
+        padding-left: 2px;
+        background-color: rgba(255,255,255,0.6);
+    }
+    .workContent,
+    .educationContent,
+    .certificatesContent,
+    .skillsContent {
+        padding-top: 1px;
+    
+    }
+    hr {
+        margin-left: 90px;
+    }
+    .container-right{
+        display: none;
+    }
+}
+
+@media screen and (max-width:800px){
+
+    .workTitle,
+    .educationTitle,
+    .certificatesTitle,
+    .skillsTitle,
+    .workContent,
+    .educationContent,
+    .certificatesContent,
+    .skillsContent,
+    .contact-links {
+        margin-left: 30px;
+        margin-right: 30px;
+        width: auto;
+    }
+
+    hr {
+        margin-left: 30px;
+    }
+}
+
+
+/* @media screen and (max-width: 1630px) {
     .workTitle,
     .educationTitle,
     .certificatesTitle,
@@ -113,7 +164,7 @@ ul{
     .container-right{
         display: none;
     }
-}
+} */
 /*navi*/
 
 
