--- a/css/aboutPage.css
+++ b/css/aboutPage.css
@@ -3,8 +3,7 @@ html {
 }
 
 body{
-    /* font-family: Tahoma, sans-serif; */
-    font-family: 'Edu VIC WA NT Beginner', cursive;
+    font-family: 'Dosis', sans-serif;
     margin: 0;
     font-size: 30px;
 }
@@ -37,6 +36,7 @@ body{
     text-align: left;
     margin-left: 180px;
     margin-right: 150px;
+    padding-left: 10px;
 }
 
 
@@ -55,7 +55,7 @@ hr {
     margin-right: 150px;
     font-size: 22px;
     text-align:justify;
-    font-family: 'Edu VIC WA NT Beginner', cursive;
+    padding-left: 10px;
 }
 
 
@@ -169,6 +169,7 @@ hr {
     list-style:none;
     float: left;
     text-align: center;
+    padding-left: 10px;
 }
 
 .site-nav a {
