--- a/css/cvPage.css
+++ b/css/cvPage.css
@@ -3,8 +3,7 @@ html {
 }
 
 body{
-    /* font-family: Tahoma, sans-serif; */
-    font-family: 'Edu VIC WA NT Beginner', cursive;
+    font-family: 'Dosis', sans-serif;
     margin: 0;
     font-size: 30px;
 }
@@ -65,7 +64,6 @@ body{
     margin-right: 150px;
     font-size: 22px;
     line-height: 1;
-    font-family: 'Edu VIC WA NT Beginner', cursive;
     width: 60%;
 }
 
@@ -136,35 +134,6 @@ ul{
     }
 }
 
-
-/* @media screen and (max-width: 1630px) {
-    .workTitle,
-    .educationTitle,
-    .certificatesTitle,
-    .skillsTitle,
-    .workContent,
-    .educationContent,
-    .certificatesContent,
-    .skillsContent,
-    .contact-links {
-        margin-left: 142px;  
-        padding-left: 2px;
-        background-color: rgba(255,255,255,0.6);
-    }
-    .workContent,
-    .educationContent,
-    .certificatesContent,
-    .skillsContent {
-        padding-top: 1px;
-    
-    }
-    hr {
-        margin-left: 142px;
-    }
-    .container-right{
-        display: none;
-    }
-} */
 /*navi*/
 
 
@@ -187,6 +156,7 @@ ul{
     list-style:none;
     float: left;
     text-align: center;
+    padding-left: 10px;
 }
 
 .site-nav a {
