--- a/css/homePageNew.css
+++ b/css/homePageNew.css
@@ -3,8 +3,7 @@ html {
 }
 
 body{
-    /* font-family: Tahoma, sans-serif; */
-    font-family: 'Edu VIC WA NT Beginner', cursive;
+    font-family: 'Dosis', sans-serif;
     margin: 0;
     font-size: 30px;
 }
@@ -145,6 +144,7 @@ img {
     list-style:none;
     float: left;
     text-align: center;
+    padding-left: 10px;
 }
 
 .site-nav a {
